[package]
name = "article-cross-poster"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"

# Markdown parsing
pulldown-cmark = "0.12"
gray_matter = "0.2"

# System paths
dirs = "5.0"

# Unicode handling
unicode-segmentation = "1.12"
